# borshnear-test

contract/: Cargo.toml  build.sh
contract/src/: lib.rs
